[tool.poetry]
name = "antur"
version = "0.3.0"
description = "Antur is a Python TUI tool for browsing and debugging sitemap data."
license = "MIT"
authors = ["Joe Banks <joe@jb3.dev>"]
readme = "README.md"
homepage = "https://github.com/jb3/antur"
repository = "https://github.com/jb3/antur"
keywords = ["sitemap", "xml", "tui", "cli", "debugging", "browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.71.0"
aiohttp = "^3.9.5"
humanize = "^4.10.0"
lxml = "^5.2.1"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
antur = "antur.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212"]

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true
